# ed-auth

./: Makefile  package.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml
email_templates/: login.html
src/: package.py
src/application/contracts/infrastructure/persistence/: abc_otp_repository.py  abc_unit_of_work.py  abc_user_repository.py
src/application/contracts/infrastructure/utils/: abc_jwt.py  abc_otp.py
src/application/features/auth/dtos/: __init__.py
src/application/features/auth/dtos/validators/: __init__.py  create_user_dto_validator.py  login_user_dto_validator.py  verify_otp_dto_validator.py
src/application/features/auth/handlers/commands/: __init__.py  create_user_command_handler.py  create_user_verify_command_handler.py  delete_user_command_handler.py  login_user_command_handler.py  login_user_verify_command_handler.py  (+1 more)
src/application/features/drivers/dtos/: __init__.py  create_driver_dto.py  driver_dto.py
src/application/features/user/dtos/: create_user_dto.py  user_dto.py
src/common/: generic_helpers.py
src/common/typing/: config.py
src/domain/entities/: business.py  car.py  driver.py  location.py  user.py
src/ed_auth/common/: generic_helpers.py
src/ed_auth/common/typing/: config.py
src/ed_auth/documentation/message_queue/rabbitmq/: abc_auth_rabbitmq_subscriber.py  auth_queue_descriptions.py  auth_rabbitmq_subscriber.py
src/ed_auth/infrastructure/utils/: jwt.py
src/ed_auth/webapi/: api.py  dependency_setup.py
src/ed_auth/webapi/controllers/: auth_controller.py  rabbitmq_controller.py  user_controller.py
src/infrastructure/persistence/: unit_of_work.py
src/infrastructure/persistence/models/: user_model.py
src/infrastructure/persistence/repositories/: generic_repository.py  otp_repository.py  user_repository.py
src/infrastructure/rabbitmq/: producer.py  subscriber.py
src/infrastructure/utils/: jwt.py  otp.py  password.py
src/webapi/: api.py  dependency_setup.py
src/webapi/controllers/: auth_controller.py  driver_controller.py  user_controller.py
tests/helpers/: fixture_generator.py
(+48 files in other folders)
