[tool.poetry]
name = "ed-auth"
version = "0.2.6"
description = ""
authors = ["ffekirnew <ffekirnew0808@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
fastapi = {extras = ["standard"], version = "^0.115.5"}
websockets = "^14.1"
rmediator = "^0.2.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
psycopg2 = "^2.9.10"
pyjwt = "^2.10.1"
pymongo = "^4.13.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytest-asyncio = "^0.25.3"
twine = "^6.1.0"
ed-domain = "^0.3.49"
ed-infrastructure = "^0.3.19"
jsons = "^1.6.3"
ed-notification = "0.1.16"
faststream = {extras = ["rabbit"], version = "^0.5.42"}
ed-core = "^0.2.28"
aiohttp = "^3.12.6"
psycopg = "^3.2.9"


[tool.poetry.group.test.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
ruff = "^0.8.2"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"
